# FractionOperation

./: CMakeLists.txt  main.cpp
model/: Fraction.cpp  Fraction.h  ValueType.cpp  ValueType.h
operation/: Add.cpp  Add.h  Calculator.cpp  Calculator.h  Operation.h  Subtraction.cpp  Subtraction.h
utils/: FractionUtils.cpp  FractionUtils.h
